--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
 			<version>5.1.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.5</version>
+		</dependency>
 
 
 		<dependency>
